# georm

./: .dir-locals.el  .env.example  .gitignore  .tarpaulin.ci.toml  .tarpaulin.local.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.MIT.md  README.md  bacon.toml  deny.toml  devenv.nix  flake.nix  justfile  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: ci.yaml
docker/: compose.dev.yml  mod.just
examples/postgres/users-comments-and-followers/: Cargo.toml
examples/postgres/users-comments-and-followers/src/: errors.rs  main.rs
examples/postgres/users-comments-and-followers/src/cli/: comments.rs  followers.rs  mod.rs  users.rs
examples/postgres/users-comments-and-followers/src/models/: comments.rs  followers.rs  mod.rs  profiles.rs  users.rs
georm-macros/: Cargo.toml
georm-macros/src/: lib.rs
georm-macros/src/georm/: composite_keys.rs  defaultable_struct.rs  ir.rs  mod.rs  relationships.rs  trait_implementation.rs
georm-macros/src/georm/ir/: m2m_relationship.rs  mod.rs  simple_relationship.rs
georm-macros/src/georm/traits/: create.rs  delete.rs  find.rs  mod.rs  update.rs  upsert.rs
migrations/: 20250126153330_simple-struct-tests.down.sql  20250126153330_simple-struct-tests.up.sql  20250605215127_users-comments-and-followers.down.sql  20250605215127_users-comments-and-followers.up.sql  20250609181248_composite-key.down.sql  20250609181248_composite-key.up.sql
src/: defaultable.rs  entity.rs  georm.rs  lib.rs
tests/: composite_key.rs  defaultable_struct.rs  m2m_relationship.rs  models.rs  o2m_relationship.rs  o2o_relationship.rs  simple_struct.rs
tests/fixtures/: composite_key.sql  m2m.sql  o2o.sql  simple_struct.sql
