[workspace]
members = [
    ".",
    "georm-macros",
    "examples/postgres/*"
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Lucien Cartier-Tilet <lucien@phundrak.com>"]
homepage = "https://github.com/Phundrak/georm"
repository = "https://github.com/Phundrak/georm"
license = "MIT OR GPL-3.0-or-later"
keywords = ["sqlx", "orm", "postgres", "postgresql", "database", "async"]
categories = ["database"]

[package]
name = "georm"
readme = "README.md"
description = "Georm, a simple, opiniated SQLx ORM for PostgreSQL"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[workspace.dependencies]
georm-macros = { path = "georm-macros" }

[workspace.dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["postgres", "runtime-tokio", "macros", "migrate"]

[dependencies]
sqlx = { workspace = true }
georm-macros = { workspace = true }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"

[dev-dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["postgres", "runtime-tokio", "macros", "migrate", "chrono"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
pendantic = "deny"
nursery = "deny"
