[package]
name = "georm-users-comments-and-followers"
workspace = "../../../"
publish = false
version.workspace = true
edition.workspace = true

[dependencies]
georm = { path = "../../.." }
sqlx = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
inquire = "0.7.5"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }